<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="233dp"
        android:layout_height="225dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/esenin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="224dp"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:breakStrategy="high_quality"
        android:text="@string/Стих"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="218dp"
        android:layout_height="61dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:onClick="onInfo"
        android:text="@string/Дальше2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="218dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:onClick="onExit"
        android:text="@string/Выход" />


</LinearLayout>

